[package]
name = "serve"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple file server that serves the current directory"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
mime_guess = "2.0.4"
serde = { version = "1.0.163", features = ["derive"] }
tera = "1.18.1"
walkdir = "2.3.3"
chrono = "0.4.24"
